# Cute-Go

./: .gitignore  App.tsx  README.md  VIBRATION_TEST_GUIDE.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  supabase_setup.sql  types.ts  update-version.js  vite.config.ts
components/: AboutModal.tsx  AnalysisPanel.tsx  EndGameModal.tsx  GameBoard.tsx  GameControls.tsx  ImportExportModal.tsx  LoginModal.tsx  OfflineLoadingModal.tsx  OnlineMenu.tsx  ScoreBoard.tsx  SettingsModal.tsx  SkinShopModal.tsx  StartScreen.tsx  TsumegoLevelSelector.tsx  TsumegoListModal.tsx  TsumegoResultModal.tsx  TutorialModal.tsx  TutorialStates.ts  UserPage.tsx
components/Tsumego/: LevelGrid.tsx  TsumegoHub.tsx
electron/: main.cjs
hooks/: useAchievements.ts  useAppSettings.ts  useAudio.ts  useCloudKataGo.ts  useGameState.ts  useKataGo.ts  useWebKataGo.ts
kaya-main/: AGENTS.md  CHANGELOG.md  README.md  cliff.toml  package.json  playwright.desktop.config.ts
kaya-main/apps/desktop/: package.json  rsbuild.config.ts
kaya-main/apps/desktop/src-tauri/: ANDROID.md  Cargo.toml  tauri.conf.json
kaya-main/apps/desktop/src-tauri/.cargo/: config.toml
kaya-main/apps/desktop/src-tauri/capabilities/: default.json  mobile.json
kaya-main/apps/desktop/src-tauri/icons/: icon.icns
kaya-main/apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  onnx_engine.rs
kaya-main/apps/web/: package.json  rsbuild.config.ts
kaya-main/e2e/: clipboard.e2e.ts
public/: DebugLogger.js  problems_manifest.json  service-worker.js
public/Problems/Tsumego/: 1.sgf  10.sgf  100.sgf  101.sgf  102.sgf  103.sgf  104.sgf  105.sgf  106.sgf  107.sgf  108.sgf  109.sgf  11.sgf  110.sgf  111.sgf  112.sgf  113.sgf  114.sgf  115.sgf  116.sgf  117.sgf  118.sgf  119.sgf  12.sgf  120.sgf  13.sgf  14.sgf  15.sgf  16.sgf  17.sgf  18.sgf  19.sgf  2.sgf  20.sgf  21.sgf  22.sgf  23.sgf  24.sgf  25.sgf  (+81 more)
public/Tsumego/: qjzm.sgf
public/models/: kata1_b6.onnx  kata_dynamic.onnx
public/worker/: ai-worker.js
scripts/: generate_manifest.js
utils/: aiConfig.ts  constants.ts  goLogic.ts  helpers.ts  joseki.ts  localGoAi.ts  logger.ts  micro-board.ts  onnx-engine.ts  sgfParser.ts  supabaseClient.ts  tapTapBridge.ts  themes.ts  tsumegoData.ts
worker/: ai.worker.ts
(+8 files in other folders)
